# dcr-min

./: README.md  pyproject.toml
data/: AndoverFilters.mat  BK7_1mm.mat  Be190226_2__1xAR_1550nm_W100_P500_NWthk7.mat  NIR01-1550_3_Spectrum_1.txt  bandpass_transmission.csv  bandpass_transmission_room_temp_if.csv  bk7_10mm.mat
dl-util/: .s2j-state.json  dl.ps1  dl.sh  index.html  repo_url.txt
src/: DCRmin_sim.ipynb
