[project]
name = "dcr-min"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbstripout>=0.8.0",
    "numpy>=1.26.4",
    "scipy>=1.17.1",
    "snsphd>=0.2.5",
]

[dependency-groups]
dev = ["ipykernel>=7.0.1"]
